--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -3,7 +3,7 @@
     <body>
         {{> navbar }}
         <h1>{{ title }}</h1>
-        <p>{{ screamIt welcome_message }}</p>
+        <p>{{ message }}</p>
     </body>
     {{> footer }}
 </html>
